--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@types/node": "^20.2.1",
     "bcrypt": "^5.1.0",
     "express": "^4.18.2",
-    "node-fetch": "^3.3.1"
+    "node-fetch": "^3.3.1",
+    "sequelize": "^6.31.1",
+    "sqlite3": "^5.1.6"
   }
 }
